--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Education-Platform</title>
+    <!-- gg font popin -->
+    <link rel="stylesheet" href="./assets/font/stylesheet.css" />
     <!-- resert -->
     <link rel="stylesheet" href="./assets/css/resert.css" />
     <!-- styles -->
     <link rel="stylesheet" href="./assets/css/basic.css" />
   </head>
   <body>
-    <h1>test</h1>
+    <main>
+      <header class="header">
+        <div class="container">
+          <!-- navbar -->
+          <nav class="navbar">
+            <!-- logo -->
+            <a href="#!">
+              <img src="./assets/image/Logo.svg" alt="Lesson ." />
+            </a>
+            <!-- Navigation -->
+            <ul>
+              <li><a href="#!">Home</a></li>
+              <li><a href="#!">Coures</a></li>
+              <li><a href="#!">Pricing</a></li>
+              <li><a href="#!">Reviews</a></li>
+            </ul>
+            <!-- Action btn -->
+            <div class="action">
+              <a class="action-btn btn">Sign Up</a>
+            </div>
+          </nav>
+        </div>
+      </header>
+    </main>
   </body>
 </html>
