--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Education-Platform</title>
+    <!-- font aweasome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <!-- gg font popin -->
     <link rel="stylesheet" href="./assets/font/stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <!-- resert -->
     <link rel="stylesheet" href="./assets/css/resert.css" />
     <!-- styles -->
@@ -14,7 +25,7 @@
   </head>
   <body>
     <main>
-      <header class="header">
+      <header class="fixed-header">
         <div class="container">
           <!-- navbar -->
           <nav class="navbar">
@@ -36,6 +47,198 @@
           </nav>
         </div>
       </header>
+      <!-- header -->
+      <header class="header">
+        <div class="container">
+          <div class="hero">
+            <div class="img-block">
+              <img
+                src="./assets/image/guy-lesson 1.jpg"
+                alt="guy-lesson"
+                class="hero-img"
+              />
+              <div class="stats-list">
+                <div class="stats-item">
+                  <div class="stats-img" style="background: #fff9e8">
+                    <img src="./assets/image/courese_1.svg" alt="courese_1" />
+                  </div>
+                  <div class="row">
+                    <span class="sub">20 Courses</span>
+                    <h3 class="title">UI/UX Design</h3>
+                  </div>
+                </div>
+
+                <div class="stats-item">
+                  <div class="stats-img" style="background: #fcefff">
+                    <img src="./assets/image/courese_2.svg" alt="courese_2" />
+                  </div>
+                  <div class="row">
+                    <span class="sub">20 Courses</span>
+                    <h3 class="title">Development</h3>
+                  </div>
+                </div>
+
+                <div class="stats-item">
+                  <div class="stats-img" style="background: #ebeaff">
+                    <img src="./assets/image/courese_3.svg" alt="courese_3" />
+                  </div>
+                  <div class="row">
+                    <span class="sub">20 Courses</span>
+                    <h3 class="title">Marketing</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="info">
+              <h1 class="title">Learn without limits and spread knowledge.</h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="join-courses">
+                <button class="courses-btn btn">See Courses</button>
+                <button class="video-btn">
+                  <i class="fa-solid fa-play"></i>
+                </button>
+                <a href="#!">Watch Video</a>
+              </div>
+              <p class="desc">Recent engagement</p>
+              <div class="quantity">
+                <span class="desc participants">
+                  <strong class="value">50K</strong>
+                  Students
+                </span>
+                <span class="desc participants">
+                  <strong class="value">70+</strong>
+                  Coures
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- Courese -->
+      <div class="courese">
+        <div class="container">
+          <h2 class="title">Our popular courses</h2>
+          <div class="row">
+            <p class="desc">
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+            <div class="courese-more">
+              <button class="back">
+                <i class="fa-solid fa-chevron-left"></i>
+              </button>
+              <button class="come">
+                <i class="fa-solid fa-chevron-right"></i>
+              </button>
+            </div>
+          </div>
+          <!-- cards -->
+          <div class="courese-cards">
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/Image_courese_1.jpg"
+                  alt=""
+                  class="courese-img"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <span class="reviews"
+                    ><i class="fa-solid fa-star"></i> 4.5</span
+                  >
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="row">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-now book-first">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/Image_courese_2.png"
+                  alt=""
+                  class="courese-img"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <span class="reviews"
+                    ><i class="fa-solid fa-star"></i> 4.5</span
+                  >
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="row">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-now">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/Image_courese_3.png"
+                  alt=""
+                  class="courese-img"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <h3 class="title"><a href="#!">Web App design</a></h3>
+                  <span class="reviews"
+                    ><i class="fa-solid fa-star"></i> 4.5</span
+                  >
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="row">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-now">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Feedback -->
+      <div class="feedback">
+        <div class="container">
+          <div class="row">
+            <div class="info">
+              <img src="./assets/image/avart.jpg" alt="avart" class="avart" />
+              <span class="name">Peter Moor</span>
+              <p class="title">Student of Web Design</p>
+            </div>
+            <div class="feedback-info">
+              <i class="fa-solid fa-quote-left"></i>
+              <p class="desc">
+                Not only does my resume look impressive—filled with the names
+                and logos of world-class institutions—but these certificates
+                also bring me closer to my career goals by validating the skills
+                I've learned."
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
