--- a/index.html
+++ b/index.html
@@ -239,6 +239,144 @@
           </div>
         </div>
       </div>
+      <!-- Course results -->
+      <div class="Course-results">
+        <div class="container">
+          <div class="row">
+            <div class="img-block">
+              <img
+                src="./assets/image/Courses_result_1.png"
+                alt="Learner outcomes through our awesome platform"
+                class="image-reults"
+              />
+              <img
+                src="./assets/image/Courses_result_2.png"
+                alt="Learner outcomes through our awesome platform"
+                class="image-reults"
+              />
+            </div>
+            <div class="content">
+              <h2 class="title">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career
+              </p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <button class="btn">Sign Up</button>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="content second">
+              <h2 class="title">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="desc">
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
+              </p>
+              <button class="btn">Join Now</button>
+            </div>
+            <img
+              src="./assets/image/Courses_result_3.png"
+              alt="Learner outcomes through our awesome platform"
+              class="img-second"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- Our Blog -->
+      <div class="our-blog">
+        <div class="container">
+          <div class="headding">
+            <h2 class="title">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+          <div class="our-blog-cards">
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/our_blog_1.png"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <i class="fa-solid fa-circle"></i>
+                  <span class="date">21 November 2021</span>
+                </div>
+
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remot
+                    job?</a
+                  >
+                </h3>
+                <button class="btn read-more read-first">Read More</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/our_blog_2.png"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <i class="fa-solid fa-circle"></i>
+                  <span class="date">21 November 2021</span>
+                </div>
+
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remot
+                    job?</a
+                  >
+                </h3>
+                <button class="btn read-more">Read More</button>
+              </div>
+            </div>
+
+            <div class="card">
+              <a href="#!">
+                <img
+                  src="./assets/image/our_blog_3.png"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                />
+              </a>
+              <div class="content">
+                <div class="row">
+                  <i class="fa-solid fa-circle"></i>
+                  <span class="date">21 November 2021</span>
+                </div>
+
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remot
+                    job?</a
+                  >
+                </h3>
+                <button class="btn read-more">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="dot-line">
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
