--- a/index.html
+++ b/index.html
@@ -377,6 +377,90 @@
           </div>
         </div>
       </div>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="container">
+          <div class="row-top">
+            <div class="column social">
+              <div class="content">
+                <h3 class="title">
+                  <a href="#!"> Lesson <i class="fa-solid fa-circle"></i> </a>
+                </h3>
+                <p class="desc">
+                  Need to help for your dream Career? trust us. With Lesson,
+                  study becomes a lot easier with us.
+                </p>
+                <ul class="brand">
+                  <li>
+                    <a href="#!"
+                      ><img src="./assets/image/social_1.svg" alt="Twitter"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#!"
+                      ><img src="./assets/image/social_2.svg" alt="Facebook"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#!"
+                      ><img src="./assets/image/social_3.svg" alt="Linkedin"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#!"
+                      ><img src="./assets/image/social_4.svg" alt="Instagram"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="column">
+              <h4 class="title">Company</h4>
+              <hr />
+              <ul>
+                <li><a href="#!">About Us</a></li>
+                <li><a href="#!">Features</a></li>
+                <li><a href="#!">Our Pricing</a></li>
+                <li><a href="#!">Latest News</a></li>
+              </ul>
+            </div>
+
+            <div class="column">
+              <h4 class="title">Support</h4>
+              <hr />
+              <ul>
+                <li><a href="#!">FAQ's</a></li>
+                <li><a href="#!">Terms & Conditions</a></li>
+                <li><a href="#!">Privacy Policy</a></li>
+                <li><a href="#!">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="title">Address</h4>
+              <hr />
+              <ul>
+                <li>
+                  <a href="#!"
+                    >Location: 27 Division St, New York, NY 10002, USA</a
+                  >
+                </li>
+                <li>
+                  <a href="#!">Email: email@gmail.com</a>
+                </li>
+                <li><a href="#!">Phone: + 000 1234 567 890</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="row-bottom">
+            <hr class="line" />
+            <span class="coppy-right"
+              >Copyright ©2022 webdesign.gdn All rights reserved</span
+            >
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
